# OPC_UA_tag_import

./: pyproject.toml  xxxxx-xxxxx-OPC01-TSC0-A1.docx  xxxxx-xxxxx-VTRA-A1.docx
functions/: kepware_functions.py  shared_functions.py  simatic_net_functions.py
notebook/: generate_kepware_tags.ipynb  generate_simatic_net_tags.ipynb
result/kepware/: DB17_DSF4_300.csv  DSF3_DB17.csv
result/simatic_net/: CU1256_FC2SYR_SimaticNet_Import.csv  CU7308_DSF5_SimaticNet_Import.csv
source/kepware/: DB17_DSF4_300.AWL  DSF3_DB17.txt
source/simatic_net/: CU1256_FC2SYR_PEPS.AWL  CU7002_IFC_VL1_PEPS.db  CU7308_DSF5_PEPS.db
