[tool.poetry]
name = "generate-kepware-import"
version = "0.1.0"
description = ""
authors = ["coppiv <valentijn.coppin@pfizer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
