[tool.poetry]
name = "generate-kepware-import"
version = "0.1.0"
description = ""
authors = ["coppiv <valentijn.coppin@pfizer.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
